# radix-tree

./: .gitignore  LICENSE  Makefile.am  README.md  bootstrap.sh  configure.ac
src/: main.c  radix_tree.c  radix_tree.h
test-data/: name-list.txt
